# Obsidian

./: .env.example  App.tsx  COMPLETION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  MasterPlan.md  README.md  USER_FUNCTIONS.md  alerts.yml  build-images.sh  datastructure.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  index.css  index.html  package-lock.json  package.json  prometheus.yml  simulator.js  tailwind.config.js  turbo.json  types.ts
apps/ai-service/: pyproject.toml
apps/ai-service/src/: engine.py  main.py
apps/api-core/: Dockerfile  package.json  tsconfig.json
apps/data-pipeline/: Dockerfile  package.json  tsconfig.json
apps/ml-pipeline/: README.md  pyproject.toml  scheduler.py
apps/ml-pipeline/src/evaluation/: evaluator.py
apps/ml-pipeline/src/training/: pipeline.py
apps/prototype/: IMPLEMENTATION_SUMMARY.md  README.md  metadata.json  package.json  types.ts
apps/science-lab/: Dockerfile  app.py  pyproject.toml
apps/telemetry-service/: package.json
apps/web-client/: Dockerfile  next.config.ts  package.json
components/: AdminView.tsx  Dashboard.tsx  FinanceView.tsx  InventoryView.tsx  Login.tsx  LogisticsView.tsx  OrdersView.tsx  PlanningView.tsx  ProcurementView.tsx  Shared.tsx  ShopFloorView.tsx  TraceView.tsx  TravelerView.tsx  UserProfileModal.tsx
docs/: INDEX.md
docs/api-reference/: api.md
docs/deployment/: production.md
services/: AgentWorkReviewContextSummary.md  MasterPlan.md  auditService.ts  firebaseConfig.ts  firebaseProductionService.ts  geminiService.ts  mockData.ts  monitoringService.ts  telemetryService.ts
(+57 files in other folders)
